kubernetes/yamls/web/ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yaydoc
  namespace: web
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - yaydoc.org
    secretName: yaydoc-tls
  rules:
  - host: yaydoc.org
    http:
      paths:
      - path: /
        backend:
          serviceName: yaydoc
          servicePort: 3001
